cmake_minimum_required(VERSION 3.15)
project(Learn_Data_Structure)

set(CMAKE_CXX_STANDARD 14)

add_executable(8555 "Linear List/8555.c")
add_executable(8556 "Linear List/8556.c")
add_executable(8557 "Linear List/8557.c")
add_executable(8558 "Linear List/8558.c")
add_executable(8560 "Linear List/8560.c")
add_executable(8563 "Stack and Queue/8563.c")
add_executable(8562 "Stack and Queue/8562.c")
add_executable(8566 "Stack and Queue/8566.c")
add_executable(8569 "Stack and Queue/8569.c")
add_executable(8565 "Stack and Queue/8565.c")
add_executable(8568 "Stack and Queue/8568.c")
add_executable(7080 tree/7080.c)
add_executable(7079 tree/7079.c)
add_executable(7078 tree/7078.c)
add_executable(7077 tree/7077.cpp)
add_executable(temp tree/temp.cpp)