cmake_minimum_required(VERSION 3.15)
project(Learn_Data_Structure)

set(CMAKE_CXX_STANDARD 14)

add_executable(8555 "Linked List/8555.c")
add_executable(8556 "Linked List/8556.c")
add_executable(8557 "Linked List/8557.c")
add_executable(8558 "Linked List/8558.c")
add_executable(8560 "Linked List/8560.c")
add_executable(8563 "Stack and Queue/8563.c")
add_executable(8562 "Stack and Queue/8562.c")
add_executable(8566 "Stack and Queue/8566.c")
add_executable(8569 "Stack and Queue/8569.c")
add_executable(8565 "Stack and Queue/8565.c")
add_executable(8568 "Stack and Queue/8568.c")
add_executable(7080 Tree/7080.c)
add_executable(7078 Tree/7078.c)
add_executable(7077 Tree/7077.cpp)
add_executable(temp Tree/temp.cpp)
add_executable(7076 Tree/7076.cpp)
add_executable(7075 Tree/7075.cpp)
add_executable(7074 Tree/7074.cpp)
add_executable(7079 Tree/7079.cpp)
add_executable(7040 Graph/7040.cpp)
add_executable(Linkedlist Review/Linkedlist.cpp)
add_executable(tree Review/tree.cpp)
add_executable(Clue_binary_tree Review/Clue_binary_tree)
add_executable(7039 Graph/7039.cpp)
add_executable(7043 Graph/7043.cpp)
add_executable(7042 Graph/7042.cpp)
add_executable(7041 Graph/7041.cpp)
add_executable(7083 Search/7083.cpp)
add_executable(7051 Search/7051.cpp)
add_executable(7081 Search/7081.cpp)
add_executable(7051_copy Search/7051_copy.cpp)
add_executable(7050 Search/7050.cpp)
add_executable(8550 Sort/8550.cpp)
add_executable(8549 Sort/8549.cpp)
add_executable(SAMS Student_Achievement_Management_System/SAMS.cpp)
add_executable(Parking_management Parking_management/Parking_management.cpp)